--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "Example",
   "version": "1.0.0",
   "description": "",
-  "homepage": "https://onichan410.github.io/testvk/",
+  "homepage": "https://onichan410.github.io/testreactvk/",
   "main": "index.js",
   "scripts": {
     "start": "cross-env PORT=10888 HTTPS=true react-scripts start",
